Hopefully fixed the navigation bar's z-index

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -30,6 +30,7 @@ body {
     padding: 0;
     overflow: hidden;
     background-color: #222;
+    z-level: 1;
 }
 
 .navigation ul.sitenav {
